# n_music

.github/workflows/: rust.yml
n_audio/: Cargo.toml
n_audio/examples/: cli_player.rs
n_audio/src/: lib.rs  music_track.rs  queue.rs
n_player/: Cargo.toml
n_player/assets/lang/: ba_Barese.json
n_player/src/: lib.rs  main.rs
n_player/src/app/: mod.rs
n_player/src/player/: mod.rs  mpris.rs  player.rs  server.rs
n_player/style/: main.css
