[package]
name = "n_player"
version = "1.4.0"
authors = ["Enn3Developer <arturpeshko39@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vizia = {git = "https://github.com/vizia/vizia"}
bitcode = { version = "0.5.0", features = ["simdutf8", "bitcode_derive"] }
n_audio = { path = "../n_audio" }
infer = "0.15.0"
rfd = "0.13.0"
audiotags = "0.5.0"
