[package]
name = "n_player"
version = "1.4.0"
authors = ["Enn3Developer <arturpeshko39@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xilem = { git = "https://github.com/linebender/xilem.git", features = ["wayland"] }
bitcode = { version = "0.6.0" }
n_audio = { path = "../n_audio" }
infer = "0.15.0"
rfd = "0.14.1"
mpris-server = "0.8.0"
smol = "2.0.0"
